Add Vagrantfile to create vm for staging

--- a/roles/ssh/templates/sshd_config.j2
+++ b/roles/ssh/templates/sshd_config.j2
@@ -15,7 +15,7 @@ Include /etc/ssh/sshd_config.d/*.conf
 #AddressFamily any
 #ListenAddress 0.0.0.0
 #ListenAddress ::
-ListenAddress {{ ansible_default_ipv4.address }}:{{ ssh_port | default("22") }}
+ListenAddress {{ ssh_server_address | default(ansible_default_ipv4.address) }}:{{ ssh_port | default("22") }}
 
 #HostKey /etc/ssh/ssh_host_rsa_key
 #HostKey /etc/ssh/ssh_host_ecdsa_key
