--- a/roles/nginx_site/templates/site.conf.j2
+++ b/roles/nginx_site/templates/site.conf.j2
@@ -1,9 +1,19 @@
 server {
+    listen 80;
 	server_name {{ server_name }};
 
 	location / {
 		proxy_pass {{ proxy_pass }};
 	}
 
-    listen 80;
+	{% if pass_socket_io %}
+    location /socket.io {
+        include proxy_params;
+        proxy_http_version 1.1;
+        proxy_buffering off;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_pass {{ proxy_pass }}/socket.io;
+    }
+	{% endif %}
 }
